--- a/index.html
+++ b/index.html
@@ -1866,5 +1866,116 @@ document.addEventListener('DOMContentLoaded', function() {
   })();
 })();
 </script>
+
+<script>
+/* === Crossroads Patch v2.4 ===
+   - Auto-generate dots for Language Paradox slides based on .lang-slide count
+   - More robust translator: contractions + "thinks ... she is/they are" -> "conceives herself/themselves as ..."
+*/
+(function(){
+  // ------------------ Slides: auto-dot builder ------------------
+  document.addEventListener('DOMContentLoaded', function(){
+    try {
+      var slides = Array.prototype.slice.call(document.querySelectorAll('.lang-slide'));
+      var n = slides.length;
+      if (!n) return;
+
+      // Find a dot container
+      var dotsContainer = document.getElementById('slideDots') ||
+                          document.querySelector('.slide-dots') ||
+                          document.querySelector('#dots') ||
+                          null;
+      if (dotsContainer && !dotsContainer.dataset.autobuilt) {
+        // If fewer dots than slides, rebuild
+        var existingDots = dotsContainer.querySelectorAll('.slide-dot, .dot, [data-slide], [data-goto]');
+        if (existingDots.length < n) {
+          dotsContainer.innerHTML = '';
+          for (var i=1; i<=n; i++){
+            var b = document.createElement('button');
+            b.className = 'slide-dot';
+            b.setAttribute('data-index', String(i));
+            b.setAttribute('aria-label', 'Go to slide ' + i);
+            b.textContent = i;
+            dotsContainer.appendChild(b);
+          }
+          dotsContainer.dataset.autobuilt = '1';
+        }
+      }
+    } catch (e) { console.warn('Auto-dot builder error', e); }
+  });
+
+  // Robust click handler for dots (works for .slide-dot/.dot and data-* attributes)
+  document.addEventListener('click', function(e){
+    var dot = e.target.closest && (e.target.closest('[data-slide]') ||
+                                   e.target.closest('[data-goto]') ||
+                                   e.target.closest('[data-index]') ||
+                                   e.target.closest('.slide-dot') ||
+                                   e.target.closest('.dot'));
+    if (dot){
+      var n = dot.getAttribute('data-slide') || dot.getAttribute('data-goto') ||
+              dot.getAttribute('data-index') || dot.textContent;
+      var k = parseInt(String(n).trim(), 10);
+      if (!isNaN(k) && typeof window.goToLangSlide === 'function'){ e.preventDefault(); window.goToLangSlide(k); }
+    }
+  }, true);
+
+  // ------------------ Translator: smarter pre-pass ------------------
+  (function(){
+    if (typeof window.translateText !== 'function') return;
+
+    function expandContractions(t){
+      // Simple common contractions (case-insensitive)
+      return t
+        .replace(/\bI'm\b/gi, 'I am')
+        .replace(/\byou're\b/gi, 'you are')
+        .replace(/\bhe's\b/gi, 'he is')
+        .replace(/\bshe's\b/gi, 'she is')
+        .replace(/\bit's\b/gi, 'it is')
+        .replace(/\bwe're\b/gi, 'we are')
+        .replace(/\bthey're\b/gi, 'they are')
+        .replace(/\bcan't\b/gi, 'cannot')
+        .replace(/\bwon't\b/gi, 'will not')
+        .replace(/\bdoesn't\b/gi, 'does not')
+        .replace(/\bdon't\b/gi, 'do not')
+        .replace(/\bdidn't\b/gi, 'did not')
+        .replace(/\baren't\b/gi, 'are not')
+        .replace(/\bisn't\b/gi, 'is not')
+        .replace(/\bwasn't\b/gi, 'was not')
+        .replace(/\bweren't\b/gi, 'were not');
+    }
+
+    function reflexive(pron){
+      var p = pron.toLowerCase();
+      if (p === 'he') return 'himself';
+      if (p === 'she') return 'herself';
+      if (p === 'they') return 'themselves';
+      if (p === 'we') return 'ourselves';
+      if (p === 'you') return 'yourself';
+      if (p === 'i') return 'myself';
+      if (p === 'it') return 'itself';
+      return pron + 'self';
+    }
+
+    function thinkCopulaToConceive(text){
+      // "<subject> thinks (that)? <pron> is/are <X>" -> "<subject> conceives <reflexive(pron)> as <X>"
+      // Handles: "She always thinks she is the best ...", "They think they are ..."
+      return text.replace(/\b(thinks|think|believes|believe)\s+(that\s+)?\b(he|she|they|we|you|i|it)\s+(is|are|was|were)\b/gi,
+        function(m, verb, _that, pron, cop){
+          var refl = reflexive(pron);
+          return verb + ' ' + refl + ' as';
+        });
+    }
+
+    var originalTranslate = window.translateText;
+    window.translateText = function(){
+      var input = document.getElementById('inputText');
+      if (input && input.value){
+        input.value = thinkCopulaToConceive(expandContractions(input.value));
+      }
+      originalTranslate();
+    };
+  })();
+})();
+</script>
 </body>
 </html>
