--- a/index.html
+++ b/index.html
@@ -1977,5 +1977,126 @@ document.addEventListener('DOMContentLoaded', function() {
   })();
 })();
 </script>
+
+<script>
+/* === Crossroads Consolidated Fix v2.5 === */
+(function(){
+  // -------- Slides: compute from DOM, build dots to match exactly --------
+  function getSlides(){ return Array.prototype.slice.call(document.querySelectorAll('.lang-slide')); }
+  function rebuildDots(){
+    var slides = getSlides();
+    var n = slides.length;
+    var dotsContainer = document.getElementById('slideDots') ||
+                        document.querySelector('.slide-dots') ||
+                        document.querySelector('#dots');
+    if (!dotsContainer) return n;
+    // Rebuild to exactly n
+    dotsContainer.innerHTML = '';
+    for (var i=1;i<=n;i++){
+      var b = document.createElement('button');
+      b.className = 'slide-dot';
+      b.setAttribute('data-index', String(i));
+      b.setAttribute('aria-label','Go to slide '+i);
+      b.textContent = i;
+      dotsContainer.appendChild(b);
+    }
+    return n;
+  }
+
+  var totalLangSlides = 0;
+  var currentLangSlide = 1;
+
+  function updateLangSlideSafe() {
+    var slides = getSlides();
+    totalLangSlides = slides.length;
+    if (totalLangSlides === 0) return;
+    if (currentLangSlide > totalLangSlides) currentLangSlide = totalLangSlides;
+    slides.forEach(function(s){ s.classList.remove('active'); });
+    var target = document.querySelector('.lang-slide[data-slide="'+currentLangSlide+'"]') || slides[currentLangSlide-1];
+    if (target) target.classList.add('active');
+
+    var dots = Array.prototype.slice.call(document.querySelectorAll('.slide-dot'));
+    dots.forEach(function(d,i){ d.classList.toggle('active', i+1===currentLangSlide); });
+
+    var counter = document.getElementById('slideCounter');
+    if (counter) counter.textContent = currentLangSlide + ' / ' + totalLangSlides;
+
+    var prevBtn = document.getElementById('prevSlideBtn');
+    var nextBtn = document.getElementById('nextSlideBtn');
+    if (prevBtn){ prevBtn.disabled = currentLangSlide===1; prevBtn.style.opacity = prevBtn.disabled?'0.5':'1'; }
+    if (nextBtn){ nextBtn.disabled = currentLangSlide===totalLangSlides; nextBtn.style.opacity = nextBtn.disabled?'0.5':'1'; }
+  }
+
+  window.goToLangSlide = function(n){
+    var slides = getSlides();
+    totalLangSlides = slides.length;
+    if (!totalLangSlides) return;
+    n = Math.max(1, Math.min(totalLangSlides, Number(n)||1));
+    currentLangSlide = n;
+    updateLangSlideSafe();
+  };
+  window.nextSlide = function(){ window.goToLangSlide(currentLangSlide+1); };
+  window.prevSlide = function(){ window.goToLangSlide(currentLangSlide-1); };
+
+  document.addEventListener('DOMContentLoaded', function(){
+    // Build dots fresh based on actual slides
+    rebuildDots();
+    updateLangSlideSafe();
+  });
+
+  document.addEventListener('click', function(e){
+    var dot = e.target.closest && (e.target.closest('[data-slide]') ||
+                                   e.target.closest('[data-goto]') ||
+                                   e.target.closest('[data-index]') ||
+                                   e.target.closest('.slide-dot') ||
+                                   e.target.closest('.dot'));
+    if (dot){
+      var n = dot.getAttribute('data-slide') || dot.getAttribute('data-goto') ||
+              dot.getAttribute('data-index') || dot.textContent;
+      var k = parseInt(String(n).trim(),10);
+      if (!isNaN(k)){ e.preventDefault(); window.goToLangSlide(k); }
+    }
+  }, true);
+
+  // -------- Translator improvements: skip copula->process when followed by gerund --------
+  (function(){
+    if (typeof window.translateText !== 'function') return;
+
+    function expandContractions(t){
+      return t.replace(/\b(she|he|it|that|there|here)'s\b/gi, '$1 is')               .replace(/\bI'M\b/gi, 'I am').replace(/\bI'm\b/g, 'I am')               .replace(/\byou're\b/gi, 'you are')               .replace(/\bwe're\b/gi, 'we are')               .replace(/\bthey're\b/gi, 'they are');
+    }
+
+    var copulaMap = {"is":"emerges as","are":"manifest as","was":"arose as","were":"interacted as"};
+
+    function skipCopulaNearGerund(text){
+      // Protect "is/are/was/were (adv)? <verb>ing" patterns by temporarily marking them
+      // e.g., "is wanting", "is always wanting"
+      return text.replace(/\b(is|are|was|were)(\s+\w+)?\s+(\w+ing)\b/gi, function(m,cop,adv,ing){
+        return '[[COP-GERUND ' + (cop + (adv||'') + ' ' + ing) + ']]';
+      });
+    }
+
+    function restoreCopulaNearGerund(text){
+      return text.replace(/\[\[COP-GERUND ([^\]]+)\]\]/g, '$1');
+    }
+
+    var originalTranslate = window.translateText;
+    window.translateText = function(){
+      var input = document.getElementById('inputText');
+      if (input && input.value){
+        input.value = expandContractions(input.value);
+        input.value = input.value.replace(/\bto\s+be\b/gi, 'being'); // ensure be->being for "to be"
+        input.value = skipCopulaNearGerund(input.value);
+      }
+      originalTranslate();
+      // After the main translator runs, restore the protected copula+gerund sequences
+      var out = document.getElementById('outputText');
+      if (out && out.textContent){
+        out.textContent = restoreCopulaNearGerund(out.textContent).replace(/\s{2,}/g,' ').trim();
+      }
+    };
+  })();
+})();
+</script>
 </body>
 </html>
