--- a/index.html
+++ b/index.html
@@ -1292,7 +1292,17 @@
                 <p style="font-style: italic; color: #b8b8b8; margin-top: 1rem;">How the structure of language shapes—and limits—our understanding of reality</p>
             </div>
 
-            <div style="max-width: 1000px; margin: 0 auto;">
+            <!-- Swiper container for Language Paradox -->
+<div id="language-paradox-swiper" class="swiper" style="max-width: 1000px; margin: 0 auto;">
+  <div class="swiper-wrapper">
+  </div> <!-- End of swiper-wrapper -->
+
+  <!-- Swiper navigation + pagination -->
+  <div class="swiper-pagination"></div>
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
+</div> <!-- End of language-paradox-swiper -->
+
                 <!-- Slide 1: Wave-Particle Duality -->
                 <div class="lang-slide active" data-slide="1">
                     <h2 style="text-align: center; font-size: 1.8rem; margin-bottom: 2rem; color: #4a9eff;">Wave-Particle Duality</h2>
@@ -2100,3 +2110,4 @@ document.addEventListener('DOMContentLoaded', function() {
 </script>
 </body>
 </html>
+
